--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="nitte-nmamit-logo.png" width="1000" height="600" alt="Institution Logo" >
 </div>
 <div class="header-content">
-<h1>NMAM Institution of Technology</h1>
+<h1>NMAM Institute of Technology</h1>
 <p>DEEMED TO BE UNIVERSITY</p>
 <p> Nitte, Karkala Taluk, Udupi - 574110. </p>
 </div>
